--- a/templates/_partials/block/sectionHeader.twig
+++ b/templates/_partials/block/sectionHeader.twig
@@ -1,5 +1,5 @@
 {% if block.headerMain %}
-    <div class="sectionHeader">
+    <div class="sectionHeader {{ class ?? null }}">
         <h2 class="sectionHeader__main">
             {{ block.headerMain }}
         </h2>
