--- a/templates/_partials/entry/header.twig
+++ b/templates/_partials/entry/header.twig
@@ -9,8 +9,8 @@
 
 {% block blockContent %}
 
-    <div class="block-header__header">
-        {{ entry.sectionHeader.render() }}
-    </div>
+{{ entry.sectionHeader.render({
+    class: 'block-header__header',
+}) }}
 
 {% endblock %}
