--- a/templates/_components/nav-top-mobile.twig
+++ b/templates/_components/nav-top-mobile.twig
@@ -4,7 +4,7 @@
         <div class="container menu-mobile__container">
             <ul class="menu-mobile__list">
                 {% for link in links %}
-                    {% if link %}
+                    {% if link and link.url %}
                     <li class="menu-mobile__single">
                         {% set delay = loop.index * 0.1 %}
                         {{ tag('a', {
