--- a/templates/_components/nav-top-desktop.twig
+++ b/templates/_components/nav-top-desktop.twig
@@ -1,7 +1,7 @@
 <nav class="nav-top-desktop">
     <ul class="nav-top-desktop__links">
         {% for link in links %}
-            {% if link %}
+            {% if link and link.url %}
             <li class="nav-top-desktop__single">
                 {%  set active = link.url == craft.app.request.absoluteUrl %}
                 {{ tag('a', {
